kube_lego.yaml
---
# Retrieves and updates TLS certificates from LetsEncrypt.org (ACME provider).
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego
spec:
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        name: kube-lego
        # Required for auto-created kube-lego-nginx service to work.
        app: kube-lego
    spec:
      containers:
        - name: kube-lego
          image: jetstack/kube-lego:0.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 5m
              memory: "10Mi"
            limits:
              cpu: 50m
              memory: "100Mi"
---
