kubernetes.yml
# Ingress Controller LoadBalancer.
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress
spec:
  type: LoadBalancer
  # You can select a static IP for your Ingress controller so your can use DNS.
  loadBalancerIP: 35.192.219.253
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    name: nginx-ingress-controller
---
# Nginx Ingress Controller
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        name: nginx-ingress-controller
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: nginx-ingress-controller
          image: gcr.io/google_containers/nginx-ingress-controller:0.8.3
          imagePullPolicy: Always
          args:
            - /nginx-ingress-controller
            # Ingress controller redirects here for any unknown subdomain, that service should:
            # - Serve a HTTP/404 on /
            # - Serve a HTTP/200 on /healthz
            - --default-backend-service=default/default-http-backend
          # Use downward API
          ports:
            - containerPort: 80
            - containerPort: 443
            # (Optional) Expose 18080 to access Nginx stats in url /nginx-status:
            #- containerPort: 18080
          # volumeMounts:
          #  - name: tls-dhparam-vol
          #    mountPath: /etc/nginx-ssl/dhparam
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: "100Mi"
            limits:
              memory: "500Mi"
      # volumes:
      #  - name: tls-dhparam-vol
      #    secret:
      #      secretName: ingress-tls-dhparam
---
# Retrieves and updates TLS certificates from LetsEncrypt.org (ACME provider).
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-lego
spec:
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        name: kube-lego
        # Required for auto-created kube-lego-nginx service to work.
        app: kube-lego
    spec:
      containers:
        - name: kube-lego
          image: jetstack/kube-lego:0.1.2
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 5m
              memory: "10Mi"
            limits:
              cpu: 50m
              memory: "100Mi"
---
# Default web server if no Ingress rule applies.
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: default-http-backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: default-http-backend
spec:
  revisionHistoryLimit: 3
  replicas: 1
  template:
    metadata:
      labels:
        name: default-http-backend
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: default-http-backend
          image: gcr.io/google_containers/defaultbackend:1.0
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 5
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 10m
              memory: 20Mi
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
            # Security hack, see https://github.com/kubernetes/kubernetes/issues/16779
            - name: no-service-account
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
      volumes:
        - name: no-service-account
          emptyDir: {}
---
# We only need this Ingress rule to generate a TLS certificate.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: che-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - secretName: che-tls-certificate
      hosts:
          # TODO: Put your hostname
        - jlewi-gke-che.cloud-ml.io
  rules:
      # TODO: Put your hostname
    - host: jlewi-gke-che.cloud-ml.io
---
apiVersion: v1
kind: Service
metadata:
  name: spdyproxy
spec:
  type: LoadBalancer
  # Should be the same IP as the Ingress controller.
  loadBalancerIP: 35.192.219.253
  ports:
    - port: 44300
  selector:
    app: che
